February 23, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfinput/analog.c: Confirmed center value should be 127 instead of
   128, removed obsolete comments.
   (http://code.google.com/p/pcsx2/source/detail?r=2587)

February 18, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * AUTHORS: Updated info.

February 17, 2010 Tristin Celestin <cetris1@umbc.edu>

 * configure.ac: Removed PulseAudio Simple API support.
 * plugins/dfsound/Makefile.am: Likewise.
 * plugins/dfsound/nullsnd.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/pulseaudiosimple.c: Removed.
 * plugins/dfsound/pulseaudio.c: Fixed high-compatibility (SPUasync) mode.

February 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxhw.c: Don't skip calls to psxDman() when TR flag of CHCR is
   true, which fixes the menu problem in Dragon Quest 7.
 * plugins/dfcdrom/cdr-linux.c: Fixed subchannel reading in threaded mode.

February 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Fixed GetlocP, which solves the problem with libcrypt
   copy protected games. (Thanks shalma)

February 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Clear the 0x20 flag when stop reading, which fixes the
   problem with Syphon Filter.
 * libpcsxcore/psxhw.c: Always update HW_DMAx_CHCR in DmaExec(), which fixes
   the problem with Harvest Moon.
   (Thanks shalma: http://forums.ngemu.com/pcsx-discussion/116599-developers-wanted-pcsx-revival-2.html)

February 10, 2010 Tristin Celestin <cetris1@umbc.edu>

 * plugins/dfsound/pulseaudio.c: PulseAudio Normal API support is now working
   in threaded non-SPUasync() mode.

February 7, 2010 Tristin Celestin <cetris1@umbc.edu>

 * plugins/dfsound/pulseaudio.c: Added PulseAudio support (not working yet).
 * plugins/dfsound/pulseaudiosimple.c: Added PulseAudio Simple API support
   (not working with SPUasync).
 * plugins/dfsound/alsa.c: Fixed the alsa plugin so that it produces cleaner